<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fibonacci_action_cpp</name>
  <version>0.0.0</version>
  <description>learning the basics of the action method ROS2 using C++</description>
	<maintainer email="ken.saito.0813@gmail.com">Kensuke Saito</maintainer>
  <license>MIT License</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>rclcpp_action</depend>
  <depend>fibonacci_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
